# hamming-archive

./: .gitignore  CMakeLists.txt  README.md  justfile
.github/workflows/: cicd.yml
src/: CMakeLists.txt  List.cpp  argparser.cpp  error.cpp  manage_file.cpp  manage_haf  manage_haf.cpp  test  test.cpp
src/headers/: List.hpp  argparser.hpp  error.hpp  manager_files.hpp
src/here/: out.haf
tests/: CMakeLists.txt  test_archiver.cpp
